--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ###
 #   Database Settings
 ###
-spring.datasource.url=jdbc:h2:mem:calculations-app;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:calculationsdb
 spring.datasource.platform=h2
 spring.datasource.username = sa
 spring.datasource.password =
@@ -13,13 +13,11 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 ###
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
 
 ###
 #   Hibernate Settings
 ###
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
