--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.spoloborota</groupId>
     <artifactId>calculator</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>calculator</name>
     <description>Test task for Aim Consulting</description>
@@ -102,7 +102,7 @@
                 <configuration>
                     <repository>${docker.image.prefix}/${project.artifactId}</repository>
                     <buildArgs>
-                        <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+                        <WAR_FILE>target/${project.build.finalName}.war</WAR_FILE>
                     </buildArgs>
                 </configuration>
             </plugin>
