--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.spoloborota</groupId>
     <artifactId>calculator</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>calculator</name>
     <description>Test task for Aim Consulting</description>
@@ -26,10 +26,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -106,9 +102,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.testcontainers</groupId>
-            <artifactId>postgresql </artifactId>
-            <version>1.8.0</version>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
         </dependency>
     </dependencies>
 
@@ -131,10 +127,19 @@
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
                 <version>1.3.6</version>
+                <executions>
+                    <execution>
+                        <id>default</id>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>push</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <repository>${docker.image.prefix}/${project.artifactId}</repository>
                     <buildArgs>
-                        <WAR_FILE>target/${project.build.finalName}.war</WAR_FILE>
+                        <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
                     </buildArgs>
                 </configuration>
             </plugin>
@@ -155,7 +160,7 @@
                                     <groupId>${project.groupId}</groupId>
                                     <artifactId>${project.artifactId}</artifactId>
                                     <version>${project.version}</version>
-                                    <type>war</type>
+                                    <type>jar</type>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
@@ -202,20 +207,11 @@
                         <id>prepare-it-database</id>
                         <phase>pre-integration-test</phase>
                         <goals>
-                            <goal>build</goal>
+                            <!--<goal>build</goal>-->
                             <goal>start</goal>
                         </goals>
                         <configuration>
                             <images>
-                                <image>
-                                    <alias>calculator</alias>
-                                    <name>${docker.image.prefix}/${project.artifactId}</name>
-                                    <run>
-                                        <log>
-                                            <color>cyan</color> <prefix>CALC</prefix>
-                                        </log>
-                                    </run>
-                                </image>
                                 <image>
                                     <name>postgres:9.5.4</name>
                                     <alias>it-database</alias>
@@ -231,6 +227,33 @@
                                             <log>database system is ready to accept connections</log>
                                             <time>20000</time>
                                         </wait>
+                                    </run>
+                                </image>
+                                <image>
+                                    <alias>calculator</alias>
+                                    <name>${docker.image.prefix}/${project.artifactId}</name>
+                                    <!--<build>-->
+                                        <!--<dockerFile>${project.basedir}/Dockerfile</dockerFile>-->
+                                    <!--</build>-->
+                                    <run>
+                                        <log>
+                                            <color>cyan</color> <prefix>CALC</prefix>
+                                        </log>
+                                        <dependsOn>
+                                            <container>postgres</container>
+                                        </dependsOn>
+                                        <wait>
+                                            <log>calculator is starting</log>
+                                            <tcp>
+                                                <ports>
+                                                    <port>8080</port>
+                                                </ports>
+                                            </tcp>
+                                            <time>60000</time>
+                                        </wait>
+                                        <ports>
+                                            <port>8080:8080</port>
+                                        </ports>
                                     </run>
                                 </image>
                             </images>
