--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
         <resources>
             <resource>
                 <filtering>true</filtering>
-                <directory>src/main/resources</directory>
+                <directory>src/${resources.dir}/resources</directory>
             </resource>
         </resources>
         <plugins>
@@ -313,6 +313,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
+                <resources.dir>main</resources.dir>
                 <build.profile.id>dev</build.profile.id>
                 <skip.integration.tests>true</skip.integration.tests>
                 <skip.unit.tests>false</skip.unit.tests>
@@ -323,6 +324,7 @@
             <id>integration-test</id>
             <properties>
                 <jdbc.url>jdbc:postgresql://it-database:5432/calculationsdb</jdbc.url>
+                <resources.dir>integration-test</resources.dir>
                 <build.profile.id>integration-test</build.profile.id>
                 <skip.integration.tests>false</skip.integration.tests>
                 <skip.unit.tests>true</skip.unit.tests>
