--- a/pom.xml
+++ b/pom.xml
@@ -115,10 +115,31 @@
         <resources>
             <resource>
                 <filtering>true</filtering>
-                <directory>src/${resources.dir}/resources</directory>
+                <directory>src/main/resources</directory>
             </resource>
         </resources>
-        <plugins>
+        <plugins><plugin>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>3.1.0</version>
+            <executions>
+                <execution>
+                    <id>copy-resources</id>
+                    <phase>compile</phase>
+                    <goals>
+                        <goal>copy-resources</goal>
+                    </goals>
+                    <configuration>
+                        <outputDirectory>${basedir}/target/classes</outputDirectory>
+                        <resources>
+                            <resource>
+                                <directory>src/${resources.dir}/resources</directory>
+                                <filtering>true</filtering>
+                            </resource>
+                        </resources>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -207,7 +228,6 @@
                         <id>prepare-it-database</id>
                         <phase>pre-integration-test</phase>
                         <goals>
-                            <!--<goal>build</goal>-->
                             <goal>start</goal>
                         </goals>
                         <configuration>
@@ -216,6 +236,7 @@
                                     <name>postgres:9.5.4</name>
                                     <alias>it-database</alias>
                                     <run>
+                                        <hostname>it-database</hostname>
                                         <env>
                                             <POSTGRES_PASSWORD>postgres</POSTGRES_PASSWORD>
                                             <POSTGRES_USER>postgres</POSTGRES_USER>
