--- a/src/integration-test/resources/application.properties
+++ b/src/integration-test/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:postgresql://it-database:5432/calculationsdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.platform=postgres
+spring.datasource.platform=postgresql
 spring.datasource.driverClassName = org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
